# tic-tac-toe

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  WASM.md  build_wasm.sh  lefthook.yml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  deploy-page.yml
src/: area.rs  consts.rs  lib.rs  line.rs  lines.rs  main.rs  resize.rs  shapes.rs  wasm.rs  window.rs
wasm/: index.html
